# Openstack_MCP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: __init__.py  audit.py  cache.py  circuit_breaker.py  config.py  feedback.py  metrics.py  openstack_client.py
mcp_proxy/: __init__.py  middleware.py  proxy.py  router.py
mcp_server/: __init__.py  registry.py  server.py  warmup.py
mcp_server/tools/: base.py
mcp_server/tools/compute/: __init__.py  get_hypervisors.py  get_instance_detail.py  get_instances.py  set_instance_action.py  set_instance_delete.py
mcp_server/tools/identity/: __init__.py  get_projects.py
mcp_server/tools/network/: __init__.py
mcp_server/tools/storage/: __init__.py
mcp_server/tools/system/: get_feedback.py
tests/: test_cache.py  test_feedback.py  test_feedback_integration.py  test_registry.py
