[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstack-mcp"
version = "0.1.0"
description = "OpenStack MCP Server & Proxy — async, lazy-import, LLM feedback"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # MCP
    "mcp>=1.0.0",
    # OpenStack
    "openstacksdk>=3.0.0",
    "keystoneauth1>=5.0.0",
    # Web / async
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    # Config / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # Observability
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
openstack-mcp-server = "mcp_server.server:main"
openstack-mcp-proxy  = "mcp_proxy.proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "mcp_server", "mcp_proxy"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Opsiyonel: Prometheus metrikleri için
[project.optional-dependencies.metrics]
dependencies = ["prometheus-client>=0.20.0"]

# Opsiyonel: Redis backend için
[project.optional-dependencies.redis]
dependencies = ["redis[asyncio]>=5.0.0", "aioredis>=2.0.0"]
